--- a/asest/css/style.css
+++ b/asest/css/style.css
@@ -176,7 +176,7 @@ header {
 
 .skill {
     margin: 30px 0px;
-    padding: 10px;
+    padding: 20px;
     text-align: justify;
     border: 1px solid transparent;
     border-radius: 5px;
@@ -187,6 +187,9 @@ header {
 
 .skill .skill-title {
     margin: 15px 0px;
+}
+.skill img{
+    border-radius: 5px;
 }
 
 /* ===============resume================== */
