--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a {
     justify-content: space-around;
     padding-top: 20px;
     filter: blur();
-    
+
 }
 
 .logo>a {
@@ -96,11 +96,11 @@ header {
     width: 100%;
     /* flex-shrink: 0; */
     background-color: #FFF8F3;
-    background-image: url('/asest/images/header_bg.png'), url('/asest/images/developer.png');
+    background-image: url('/images/header_bg.png'), url('/images/developer.png');
     background-repeat: no-repeat;
     background-position: bottom right, center left;
-    background-size: 750px , 80px;
-    
+    background-size: 750px, 80px;
+
 }
 
 .banner {
@@ -188,7 +188,8 @@ header {
 .skill .skill-title {
     margin: 15px 0px;
 }
-.skill img{
+
+.skill img {
     border-radius: 5px;
 }
 
@@ -204,7 +205,8 @@ header {
     font-weight: 700;
     color: #474747;
 }
-.resume-dtls .resume-item{
+
+.resume-dtls .resume-item {
     margin-bottom: 20px;
 }
 
@@ -231,26 +233,31 @@ header {
     margin: 20px 0px;
     padding-bottom: 15px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
 }
 
 /* ======================footer================== */
-.ftr-sec{
+.ftr-sec {
     background: #eee8e3;
     display: flex;
     align-items: center;
 }
-.footer-column{
+
+.footer-column {
     width: 50%;
     text-align: center;
 }
-.contact{
+
+.contact {
     display: flex;
     flex-direction: column;
 }
-.contact>input , .contact>textarea{
-    margin-bottom :15px; 
+
+.contact>input,
+.contact>textarea {
+    margin-bottom: 15px;
     padding: 15px;
     border: 1px solid #FFF8F3;
     border-radius: 5px;
@@ -258,9 +265,12 @@ header {
     font-weight: 300;
     background: #fff;
 }
-.contact >div{
+
+.contact>div {
     text-align: start;
 }
+
+
 /* .contact input{
     padding: 15px;
 } */
