--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header {
     width: 100%;
     /* flex-shrink: 0; */
     background-color: #FFF8F3;
-    background-image: url('/images/header_bg.png'), url('/images/developer.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
     background-position: bottom right, center left;
     background-size: 750px, 80px;
